<resources>

    <string name="app_name">Gym365</string>
    <string name="text">Bienvenido</string>

    <string name="button1">Tablas</string>
    <string name="button2">Calendario</string>
    <string name="button3">Ejercicios</string>
    <string name="button4">Rutas</string>

    <string name="pecho">Pecho</string>
    <string name="brazos">Brazos</string>
    <string name="piernas">Piernas</string>
    <string name="cardio">Cardio</string>
    <string name="espalda">Espalda</string>
    <string name="hombro">Hombro</string>
    <string name="abdominal">Abdominal</string>

    <string name="Agregar_tabla">Agregar Nueva Tabla</string>
    <string name="edit_message">Nombre</string>
    <string name="Ejercicios_a_elegir">Ejercicios</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>

    <string name="pref_default_display_name">Nombre Apellidos</string>
    <string name="pref_title_display_name">User name</string>
    <string name="title_activity_settings">Settings</string>

    <string name="confirm">Confirm</string>
    <string name="menu_insert">Add Note</string>
    <string name="menu_about">About</string>

</resources>
