<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <EditText
        android:id="@+id/name"
        android:layout_width="221dp"
        android:layout_height="61dp"
        android:background="@drawable/borde_redondo"
        android:gravity="center"
        android:hint="@string/edit_message"
        />

    <Spinner
        android:id="@+id/day"
        android:layout_width="221dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/borde_redondo"
        android:entries="@array/Dias_Semanales"
        android:gravity="center"
        />

    <Button android:id="@+id/Ejercicio_A_Elegir"
        android:layout_width="221dp"
        android:layout_height="61dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:hint="@string/Ejercicios_a_elegir"
        android:background="@drawable/borde_redondo"
        android:onClick="clickButton3"
        android:gravity="center"
        />
    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveNote"
        android:text="@string/confirm" />

</LinearLayout>